# sherpa-rs-next

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/asr-app/: package-lock.json  package.json  transparent.html
examples/asr-app/src/: App.vue  TransparentWindow.vue  transparent-main.ts
examples/asr-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/asr-app/src-tauri/capabilities/: default.json
examples/asr-app/src-tauri/src/: lib.rs  main.rs
examples/asr-demo/: Cargo.toml
examples/asr-offline/: Cargo.toml
examples/asr-offline/src/: main.rs
examples/asr-online/: Cargo.toml
examples/asr-online/src/: main.rs
examples/base-demo/: Cargo.toml
examples/simulate-streaming/: Cargo.toml
examples/simulate-streaming/src/: main.rs
examples/tts-offline/: Cargo.toml
examples/tts-offline/src/: main.rs
sherpa-rs-next/: Cargo.toml
sherpa-rs-next-macro/: Cargo.toml
sherpa-rs-next-macro/src/: derives.rs  derives_test.rs  lib.rs
sherpa-rs-next/src/: audio.rs  lib.rs
sherpa-rs-next/src/asr/: mod.rs
sherpa-rs-next/src/asr/offline/: mod.rs  paraformer.rs  sense_voice.rs
sherpa-rs-next/src/asr/online/: mod.rs  paraformer.rs  zipformer.rs  zipformer_ctc.rs
sherpa-rs-next/src/tts/offline/: kokoro.rs  mod.rs
sherpa-rs-next/src/vad/: mod.rs  silero.rs  ten.rs
src/vad/: mod.rs
