[package]
name = "sherpa-rs-next-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.37" }
syn = { version = "2.0.27", features = [
    "full",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
] }
proc-macro2 = { version = "1.0.85" }
paste = "1.0"
