[package]
name = "sherpa-rs-next"
version = "0.1.0"
edition = "2024"

[dependencies]
sherpa-rs-sys = { git = "https://github.com/BenLocal/sherpa-rs.git", branch = "for-next" }
sherpa-rs-next-macro = { path = "../sherpa-rs-next-macro" }
anyhow = "1.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
